# LuandaProject

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Package.swift  README.md  imgui.ini
cmake/: FindQt6.cmake  Info.plist.in
cmake/modules/: AddSwift.cmake  InitializeSwift.cmake
docs/: imgui-metal-integration.md
src/editor/: CMakeLists.txt  explorerwidget.cpp  explorerwidget.h  luandaeditor.h  main.cpp  viewportwidget.cpp  viewportwidget.h
src/editor/common/: luandabridge.h
src/editor/imgui/: CMakeLists.txt  imgui_dx12_texture_bridge.hpp  osx_main.mm  unix_main.cpp  viewcontroller.cpp  viewcontroller.hpp  viewportwidget.cpp  viewportwidget.hpp  win32_main.cpp
src/editor/qt/: CMakeLists.txt  explorerwidget.cpp  luandaeditor.cpp
src/editor/swiftui/: .gitignore  CMakeLists.txt  LuandaEditor.swift  MetalView.swift
src/editor/swiftui/include/: luandabridge.h  module.modulemap
src/engine/: CMakeLists.txt  Cargo.toml
src/engine/docs/: Code Citations.md  linux-dependencies.md  renderer_interface_abstraction.md  rendering items in scene graph.md  scenegraph_c_api_usage.md  scenegraph_example.c
src/engine/include/: renderer.h  renderer_d3d12.h  renderer_metal.h  renderer_metal.hpp  scenegraph.h  scenegraph_helpers.h
src/engine/src/: lib.rs
src/engine/src/renderer/: d3d12.rs  metal.rs  mod.rs  vulkan.rs
src/engine/src/scenegraph/: graph.rs
