cmake_minimum_required(VERSION 3.19)
project(LuandaEditor)

if (${LUANDA_FRONTEND_LIB} STREQUAL "ImGUI")
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    add_subdirectory("imgui")
elseif (UNIX AND NOT APPLE)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    add_subdirectory("qt")
elseif(APPLE)
    set(CMAKE_CXX_STANDARD 17)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    add_subdirectory("swiftui")
endif()

add_dependencies(LuandaEditor LuandaEngine ImGui)