[package]
name = "luanda_engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-metal = "0.3.2"
objc2-foundation = "0.3.2"
objc2 = "0.6.4"

[dependencies.windows]
version = "*"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D_Dxc",
]
